CHANGES.txt - 2007-07-05
------------------------

CHANGES IN CUPS V1.3

	- Documentation updates (STR #1775, STR #2130, STR #2131,
	  STR #2263, STR #2356, STR #2397)
	- Added a new ppdLocalizeIPPReason() function to get the
	  localized text/URI for a given IPP reason keyword for a
	  driver.
	- Removed the deskjet2.ppd driver, as it only worked with
	  a very small subset of HP DeskJet printers and was
	  confusing to users.  The rastertohp driver still
	  supports the deskjet2.ppd options for existing queues.
	- The scheduler did not add a trailing banner page if a
	  client did not specify the last document in a job (STR
	  #1711)
	- The scheduler did not report Bonjour shared printers as
	  remote printers (STR #2384)
	- Added new -R and -W options to the cupstestppd program
	  for greater control over the testing of PPDs.
	- Added a new cupsGetServerPPD() function for getting
	  an available PPD from the server (STR #2334)
	- Added a new cupsDoIORequest() function for reading
	  and writing files via IPP requests (STR #2334)
	- Added a new CUPS_GET_PPD operation for getting an
	  available PPD file on the server (STR #2334) 
	- CUPS_GET_PPDS now reports multiple ppd-product values
	  based on the PPD ModelName and Product strings (STR
	  #2334, STR #2383)
	- CUPS_GET_PPDS now reports the PSVersion attributes
	  from a PPD file in the ppd-psversion attribute
	  (STR #2334)
	- CUPS_GET_PPDS now reports the cupsModelNumber attribute
	  from a PPD file in the ppd-model-number attribute (STR
	  #2383)
	- CUPS_GET_PPDS now reports a driver type string in the
	  ppd-type attribute based on the cupsFax and cupsFilter
	  attributes in a PPD file (STR #2383)
	- Added a new printer attribute called "cups-version"
	  which reports the version of CUPS that is running
	  (STR #2240)
	- backendRunLoop() now aborts immediately on SIGTERM
	  if no data has been written yet (STR #2103)
	- Due to poor IPP support from the vendors, the SNMP