@@ -53,6 +53,7 @@ MAN7	=	backend.$(MAN7EXT) \
 		filter.$(MAN7EXT)
 MAN8	=	accept.$(MAN8EXT) \
 		cupsaddsmb.$(MAN8EXT) \
+		cupsctl.$(MAN8EXT) \
 		cups-deviced.$(MAN8EXT) \
 		cups-driverd.$(MAN8EXT) \
 		cups-lpd.$(MAN8EXT) \
